# homework8

./: authors.json  consumer.py  hw.py  producer.py  pyproject.toml  quotes.json  seed.py
