[tool.poetry]
name = "homework8"
version = "0.1.0"
description = ""
authors = ["TimurVerba <135266210+TimurVerba@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
redis = "^5.0.1"
redis-lru = "^0.1.2"
faker = "^20.0.3"
pika = "^1.3.2"
scrapy = "^2.11.0"
requests = "^2.31.0"
scrapyscript = "^1.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
